tests/negative/runtime/float_division_by_zero/input.ci
void main() {
    float x = 1.0 / 0.0;
    print(toString(x) + "\n");
}
